fix: dark mode text

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -137,7 +137,7 @@
 }
 
 .css-1qs309j-MuiButtonBase-root-MuiPickersDay-root.Mui-selected{
-  background-color: #2563EB !important;
+  background-color: #151632 !important;
 }
 
 .css-1e6y48t-MuiButtonBase-root-MuiButton-root {
