--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,9 +22,9 @@
 
 /* applied directly on active class if route match */
 .active {
-  @apply bg-blue-100 text-blue-600;
+  @apply bg-[#868dfb] text-[#151632];
 }
 
 .icon:hover{
-color: #2563EB;
+color: #151632;
 }
